# daily-summary

./: .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: daily-summary-of----date---date--dddd--mmmm-do-----.md
.github/workflows/: code.yaml  daily.yaml
daily/: __main__.py  _cli.py  _github.py  _graphql_queries.py  _models.py  _ollama.py  _summary.py  exceptions.py  models.py
daily/github/: __init__.py  _github.py  _graphql_queries.py
daily/ollama/: __init__.py  _ollama.py
scripts/: prepare-repository.sh
tests/: __init__.py  conftest.py  test_summary.py
tests/snapshots/: snap_test_summary.py
