[project]
name = "daily-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "pydash>=8.0.5",
    "pygithub>=2.6.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.395",
    "ruff>=0.9.9",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check ."
check_types = "pyright ."
fmt = "ruff format . && ruff check --fix ."
cli = "python -m daily"
