[project]
name = "daily-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "pydash>=8.0.5",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.395",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "snapshottest>=0.6.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check ."
check_types = "pyright ."
fmt = "ruff format . && ruff check --fix ."
test = "pytest ."
cli = "python -m daily"

[tool.ruff]
lint.select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "FURB", # refurb
    "I", # isort
    "PIE", # flake8-pie
    "RUF", # ruff specifics, with mutable class default checks
    "UP", # pyupgrade
    "W", # pycodestyle
]
target-version = "py311"
extend-exclude = [".venv"]
exclude = ["tests/snapshots/*"]

[tool.pyright]
include = ["daily"]
pythonVersion = "3.11"
reportIncompatibleVariableOverride = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportUnusedImport = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalMemberAccess = false
reportUntypedBaseClass = true
reportPrivateUsage = true
reportUntypedClassDecorator = true
reportConstantRedefinition = true
reportInvalidTypeVarUse = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportUnusedCoroutine = true
